# Miscellaneous

./: .clang-format  .gitignore  readme.md  update_readme.py
ate/: a.out  recipes.txt
atomic/: a.out  main.cpp
attributes/: main.cpp
auto_return/: main.cpp
back_inserter/: a.out
bowling/: main.cpp  notes.txt
c++17/: CMakeLists.txt
c++20/: README.md  main.cpp  spaceship.hpp
c_str/: a.out
chrono_time/: a.out  time.cpp
cmake/: CMakeLists.txt
const_method/: main.cpp
conversion/: a.out
copy_if/: a.out  copy_if.cpp
cross-compilation/: cross.cmake
design_patterns/: readme.md
div/: main.cpp
dtor/: a.out
exception/: a.out
file_operations/: CMakeLists.txt
flags/: CMakeLists.txt
fold_expressions/: README.html  README.md
forward_declaration/: B.cpp  B.hpp  main.cpp
getline/: a.out  main.cpp  plik.txt
includeDependencies/: a.out
includeFlag/: a.out  main.cpp
iomanip/: a.out
is_array/: a.out  isArray.cpp
modules/: main2.cpp  measure.sh
normal_distribution/: a.out  main.cpp
operator>>/: a.out  main.cpp
ostream_iterator/: a.out  main.cpp  text.txt
pointerToFunction/: a.out  main.cpp
priority_que/: a.out
push_back/: a.out  main.cpp
queue/: a.out  main.cpp
referenceClass/: a.out
regex/: a.out  main.cpp
rotate/: a.out  main.cpp
selfMove/: a.out  selfMove.cpp
selfPtr/: a.out  selfPtr.cpp
signals/: CMakeLists.txt  main.cpp
source_location/: main.cpp
stable_partition/: a.out  main.cpp
stack/: a.out
std::shared_ptr/: a.out  main.cpp
string/: a.out  main.cpp  to_string.cpp
stringstream/: a.out
(+81 files in other folders)
